--- a/Assignment1/song.css
+++ b/Assignment1/song.css
@@ -25,7 +25,7 @@ margin-bottom: 0;
 
 
 .divide{
-  border-top: thick double black;
+  border-bottom: thick double black;
   padding: 2px;
   margin: 10px;
 }
@@ -55,8 +55,16 @@ h3{
   padding: 10px;
   margin: 0;
   margin-top: 10px;
+}
 
+h5{
+  padding: 0;
+  margin:0;
+  display: block;
+}
 
+h6{
+  display:none;
 }
 
 section{
